# PhloxAR

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  index.html  params.json  requirements.txt  setup.py
PhloxAR/: __init__.py  base.py  camera.py  color.py  color_model.py  compat.py  config.py  dft.py  display.py  drawing_layer.py  font.py  image.py  linescan.py  logger.py  marker.py  stream.py  version.py
PhloxAR/classifier/: bayes.py  knn.py
PhloxAR/cluster/: hcluster.py
PhloxAR/core/: __init__.py  camera.py  color.py  const.py  dft.py  display.py  drawing_layer.py  font.py  image.py  linescan.py  marker.py  stream.py
PhloxAR/dc1394/: _camera.py  _capture.py  _control.py  _conversions.py  _core.py  _format7.py  _log.py  _types.py  _video.py  dc_cam.py  dc_cam2.py  frame.py  mode.py  z.py
PhloxAR/descriptor/: dsift.py  harris.py  sift.py
PhloxAR/exif/: __init__.py  core.py  exif-cmd.py  exif.py  tags.py  utils.py
PhloxAR/features/: __init__.py  blob.py  blob_maker.py  bof_feature_extractor.py  detection.py  edge_histogram_feature_extractor.py  face_recognizer.py  feature.py  feature_extractor_base.py  haar_cascade.py  haar_like_feature.py  haar_like_feature_extractor.py  hue_histogram_feature_extractor.py  morphology_feature_extractor.py  utils.py
PhloxAR/geom/: camera.py
PhloxAR/include/: array.hpp  color_model.py  dispatch.hpp  filters.hpp  numpy.hpp  utils.hpp
PhloxAR/loader/: math3d.py  obj_batch.py
docs/: Makefile
phlox/: base.py
tests/: ar_cube.py  ar_test.py  camera_calibration.py  harris-test.py  hello_world.py
(+60 files in other folders)
